commit new files

--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/less" ></script>
-  <script src="script.js"></script>
+  <script src="./dist/script.js"></script>
 </body>
 </html>
