--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet/less" type="text/css" href="style.less" />
   
-  <title>Interactive card details form</title>
+  <title>Interactive details form</title>
 </head>
 <body>
 
