--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <main class="container">
 
     <div class="bg">
 
@@ -92,7 +92,7 @@
     
     </div>
 
-  </div>
+  </main>
 
   <footer class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
