commit new files

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div>
           <label for="input-number">Card Number</label>
-          <input type="" id="input-number" placeholder=" e.g. 1234 5678 9123 0000" maxlength="19">
+          <input id="input-number" placeholder=" e.g. 1234 5678 9123 0000" maxlength="19">
           <small></small>
 
         </div>
@@ -59,22 +59,22 @@
         <div class="date-section">
 
           <div class="input-date">
-            <label for="date">Exp. Date (MM/YY)</label>
+            <label for="month">Exp. Date (MM/YY)</label>
             <div id="date">
               <div>
-                <input type="" id="month" placeholder="MM" maxlength="2">
+                <input id="month" placeholder="MM" maxlength="2">
                 <small></small>
               </div>
               <div>
-                <input type="" id="year" placeholder="YY" maxlength="2">
+                <input id="year" placeholder="YY" maxlength="2">
                 <small></small>
               </div>
             </div>
           </div>
 
           <div class="input-cvc">
-            <label for="input-cvc">CVC</label>
-            <input type="" id="cvc" placeholder="e.g. 123" maxlength="3">
+            <label for="cvc">CVC</label>
+            <input id="cvc" placeholder="e.g. 123" maxlength="3">
             <small></small>
           </div>
 
